# open-np-hard-research

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
benchmarks/: README.md
docs/: CLAIM_LEVELS.md
docs/journal/: 2026-07-23-3sat-tdd.md
docs/superpowers/plans/: 2026-07-23-dpll-reference-baseline.md  2026-07-23-open-np-hard-research-launch.md  2026-07-23-readme-neutrality.md  2026-07-23-research-protocols-and-credit.md
docs/superpowers/specs/: 2026-07-23-dpll-reference-baseline-design.md  2026-07-23-open-np-hard-research-design.md  2026-07-23-readme-neutrality-design.md  2026-07-23-research-protocols-and-credit-design.md
experiments/: README.md
experiments/dpll-agreement-v1/: README.md  results.json
foundations/: 3-sat.md  README.md
hypotheses/: TEMPLATE.md
negative-results/: README.md
proofs/: README.md
reductions/: README.md
src/open_np_research/: __init__.py  agreement.py  finite.py  sat3.py
tests/: test_agreement.py  test_dimacs_contract.py  test_dpll.py  test_finite.py  test_sat3.py
translations/: README.md
