[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "open-np-research"
version = "0.1.0"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
